--- a/README.html
+++ b/README.html
@@ -1,6 +1,6 @@
 Student Project  Reports Management  Sytem
 ******Technology Used***************
-1) Express, MongoDB, React Js, Node Js, Use context api etc
+1) Express, MongoDB, React Js, Node Js, Use context api, axios, React-bootstrap etc
 **********Functionality***********
-1) User Can Register on website, he will navigate students Engineering projects Reports as private Root
+1) User Can Register on website, he will navigate students Engineering projects Reports as private Root after Login
 2) Contact For will Collect Data from user & add in mongodb Database.
